# crabby_dns

./: Cargo.toml  LICENSE.MD  README.md
config/: cli.yml
data/: cname_jumps1_response.pkt  cname_jumps2_response.pkt  cname_query.pkt  query.pkt  response.pkt
src/: buffer.rs  dns.rs  lib.rs  main.rs
src/dns/: domain_name.rs  header.rs  message.rs  mod.rs  question.rs  rr.rs
