[package]
authors = ["Tristan Burgess <tburgessdev@gmail.com>"]
description = "A DNS nameserver system intended to be a learning project both for myself and as an aide in teaching others more about DNS."
edition = "2018"
license = "MIT"
name = "crabby_dns"
readme = "README.md"
version = "0.1.0-alpha.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
